loyality , checkout changes

--- a/src/app/components/auth/account-settings/loyalty-points/loyalty-points.component.html
+++ b/src/app/components/auth/account-settings/loyalty-points/loyalty-points.component.html
@@ -18,7 +18,7 @@
                                                 <td>
                                                     <h4 class="title-data-points">Order:{{item.orderID}}</h4>
                                                     <p class="summary-points">
-                                                        <span class="date-points">{{item.transactionDate|date}}</span>
+                                                        <span class="date-points">{{item.transactionDate|date:'MM/dd/yy'}}</span>
                                                         <span class="cate-points">{{item.pointTransactionType.pointTransactionTypeDescription}}</span>
                                                     </p>
                                                 </td>
