--- a/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
+++ b/src/app/components/home/enrollment/enrollmentinfo/enrollmentinfo.component.css
@@ -569,7 +569,12 @@ button {
     font-weight: 500;
 }
 
-
+.invalid-feedback-customclass {
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #dc3545;
+}
 /* media  css */
 
 @media (min-width: 992px) {
